--- a/index.html
+++ b/index.html
@@ -47,12 +47,19 @@
 
      <div class="contbg">  
   
-  <p>  PRAYATNA is a mission carried out by the students of SVVV. The members of this committee are involved in social service for computer 
-        awareness and computer education in rural areas. The main motive is to give them the basic knowledge about computers. The members go to nearby 
-        villages and tell them about computers and its usage through clips, animation etc. they teach them some basics regarding computers, hardware 
-        parts,ms-word, flash games, paint brush, calculator etc. . Games and other sort of competitions are also conducted among rural children and 
-        are awarded as per their performance. An interactive session of question answer round is also conducted among students and the one asks or 
-        answers a question is awarded.</p>
+  <p> प्रyatna is an initiative under Shri Vaishnav Vidyapeeth Vishwavidyalaya (SVVV),
+Indore which aims at providing quality education to the students of government schools through
+interactive medium. प्रyatna is a Non Profitable Organization run and managed by the students
+and faculties of SVVV who believe that Communication Skills and Computer Education are the
+two important aspects of education which cannot be overlooked.
+प्रyatna wishes to work with the teachers at government schools to gain the
+valuable experience from them and boost the social serving agenda of the NPO. Also, this will
+inculcate in our volunteers the feeling of giving back to the society.
+We focus on teaching English and Computer Education through interactive
+and creative mediums so as to infuse the knowledge of these vital subjects in students.
+Additionally, we also try to give the students -artistic knowledge, general knowledge, and
+awareness. Main aim of प्रyatna is to give children enough idea of possible career paths they
+can pursue in the future, and to be able to live a bright future.</p>
 
 
       <br><br>
@@ -91,10 +98,13 @@
           <tr id="g">
             <td > <img src="vision.jpeg" alt="" width=500px class="pic">
             </td>
-            <td><h1 style="font-family: 'Berkshire Swash'; font-size: 50px;">Our Vision</h1><p>Smith awareness and computer education in rural areas. The main motive is to give them the basic knowledge about computers. The members go to nearby 
-              villages and tell them about computers and its usage through clips, animation etc. they teach them some basics regarding computers, hardware 
-              parts,ms-word, flash games, paint brush, calculator etc. . Games and other sort of competitions are also conducted among rural children and 
-             </p>></td>
+            <td><h1 style="font-family: 'Berkshire Swash'; font-size: 50px;">Our Vision</h1><p>
+              Education is the most powerful weapon that you can use to change the World. We
+believe that if you change a child’s life, you change a family’s which can change a
+community and ultimately the world.
+We want to be the light over darkness. The idea is to share what we have #shiksha.
+And in the process, inspire people around us to give back to those who need it most.
+            </p>></td>
            </tr>
           </table>
 
@@ -102,15 +112,34 @@
 
           <table style="width:100%">
             <tr id="a">
-              <td><h1 style="font-family: 'Berkshire Swash'; font-size: 50px;">Our Mission</h1><p>Smith awareness and computer education in rural areas. The main motive is to give them the basic knowledge about computers. The members go to nearby 
-                villages and tell them about computers and its usage through clips, animation etc. they teach them some basics regarding computers, hardware 
-                parts,ms-word, flash games, paint brush, calculator etc. . Games and other sort of competitions are also conducted among rural children and 
-               </p>></td>
+              <td><h1 style="font-family: 'Berkshire Swash'; font-size: 50px;">Our Mission</h1><p>As one person can’t change the world, but together we can make a difference. This
+                is what we are “PRAYATNA”. Prayatna of change the life of those underprivileged
+                children. Prayatna to bring smiles on those little faces. Prayatna to change the way
+                how those kids looks at the world.
+                We help our children grow and they let the child inside us live. We share their pieces
+                of story with each other.<br>
+                We smile, we fight<br>
+                We deal with the plight<br>
+                We love, to care<br>
+                We learn and we share.<br>
+                Take a experience of memory for lifetime, join us and buil a connection.</p>></td>
                <td > <img src="mission.jpeg" alt="" width=500px class="pic">
                </td>
               
              </tr>
-            </table>
+            </table>प्रyatna is an initiative under Shri Vaishnav Vidyapeeth Vishwavidyalaya (SVVV),
+            Indore which aims at providing quality education to the students of government schools through
+            interactive medium. प्रyatna is a Non Profitable Organization run and managed by the students
+            and faculties of SVVV who believe that Communication Skills and Computer Education are the
+            two important aspects of education which cannot be overlooked.
+            प्रyatna wishes to work with the teachers at government schools to gain the
+            valuable experience from them and boost the social serving agenda of the NPO. Also, this will
+            inculcate in our volunteers the feeling of giving back to the society.
+            We focus on teaching English and Computer Education through interactive
+            and creative mediums so as to infuse the knowledge of these vital subjects in students.
+            Additionally, we also try to give the students -artistic knowledge, general knowledge, and
+            awareness. Main aim of प्रyatna is to give children enough idea of possible career paths they
+            can pursue in the future, and to be able to live a bright future.
   
 
          <!-- <div class="heading"  > 
