--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="icon" type="image/jpg" href="smallLogo.jpg">
 <link href='https://fonts.googleapis.com/css?family=Buenard' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Baumans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Arima Madurai' rel='stylesheet'>
+
+<link href='https://fonts.googleapis.com/css?family=Andada' rel='stylesheet'>
 </head>
 
 <body>
@@ -104,7 +109,7 @@ believe that if you change a child’s life, you change a family’s which can c
 community and ultimately the world.
 We want to be the light over darkness. The idea is to share what we have #shiksha.
 And in the process, inspire people around us to give back to those who need it most.
-            </p>></td>
+            </p></td>
            </tr>
           </table>
 
@@ -122,25 +127,12 @@ And in the process, inspire people around us to give back to those who need it m
                 We deal with the plight<br>
                 We love, to care<br>
                 We learn and we share.<br>
-                Take a experience of memory for lifetime, join us and buil a connection.</p>></td>
+                Take a experience of memory for lifetime, join us and buil a connection.</p></td>
                <td > <img src="mission.jpeg" alt="" width=500px class="pic">
                </td>
               
              </tr>
-            </table>प्रyatna is an initiative under Shri Vaishnav Vidyapeeth Vishwavidyalaya (SVVV),
-            Indore which aims at providing quality education to the students of government schools through
-            interactive medium. प्रyatna is a Non Profitable Organization run and managed by the students
-            and faculties of SVVV who believe that Communication Skills and Computer Education are the
-            two important aspects of education which cannot be overlooked.
-            प्रyatna wishes to work with the teachers at government schools to gain the
-            valuable experience from them and boost the social serving agenda of the NPO. Also, this will
-            inculcate in our volunteers the feeling of giving back to the society.
-            We focus on teaching English and Computer Education through interactive
-            and creative mediums so as to infuse the knowledge of these vital subjects in students.
-            Additionally, we also try to give the students -artistic knowledge, general knowledge, and
-            awareness. Main aim of प्रyatna is to give children enough idea of possible career paths they
-            can pursue in the future, and to be able to live a bright future.
-  
+            </table>
 
          <!-- <div class="heading"  > 
             <h1 class= "font">Our Mission</h1>
