--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Arima Madurai' rel='stylesheet'>
 
+<link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Andada' rel='stylesheet'>
 </head>
 
