--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link href='https://fonts.googleapis.com/css?family=Buenard' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Baumans' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Arima Madurai' rel='stylesheet'>
-
+<link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Andada' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Basic' rel='stylesheet'>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 
      <div class="contbg">  
   
-  <p> प्रyatna is an initiative under Shri Vaishnav Vidyapeeth Vishwavidyalaya (SVVV),
+  <p>प्रyatna is an initiative under Shri Vaishnav Vidyapeeth Vishwavidyalaya (SVVV),
 Indore which aims at providing quality education to the students of government schools through
 interactive medium. प्रyatna is a Non Profitable Organization run and managed by the students
 and faculties of SVVV who believe that Communication Skills and Computer Education are the
