--- a/index.html
+++ b/index.html
@@ -72,12 +72,16 @@ can pursue in the future, and to be able to live a bright future.</p>
 
 <div id="abc">
 
-    <!-- <br> 
+    <br> <br><br>
+
+<div>
+    <iframe width="860" height="515" src="https://www.youtube.com/embed/bN15LUfyl9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+    <p style="color: aliceblue;font-size: 25px;">“Education is not just about going to school and getting a degree.<br> It's about widening your
+      knowledge and absorbing the truth about life.”</p>
+  </div>
   
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-  </iframe>
-  
-     <br>
+     <!-- <br>
       <div class="mission"  > 
              <div class="heading"  > 
              <h1 class= "font">Our Mission</h1>
@@ -107,8 +111,8 @@ can pursue in the future, and to be able to live a bright future.</p>
             <td><h1 style="font-family: 'Berkshire Swash'; font-size: 50px;">Our Vision</h1><p>
               Education is the most powerful weapon that you can use to change the World. We
 believe that if you change a child’s life, you change a family’s which can change a
-community and ultimately the world.
-We want to be the light over darkness. The idea is to share what we have #shiksha.
+community and ultimately the world.<Br>
+We want to be the light over darkness. The idea is to share what we have "SHIKSHA".
 And in the process, inspire people around us to give back to those who need it most.
             </p></td>
            </tr>
